# RaMiLass

./: CMakeLists.txt  README.md  pixi.toml
Report/: PARTIE_3_Introduction.tex
analyses/: dgenies_config.txt
analyses/dotplots/: minia_contigs_varankomodo_reference.html  ramilass_contigs_fused_varankomodo_reference.html  ramilass_contigs_unfused_varankomodo_reference.html
analyses/quast/: icarus.html  report.html  report.tex  report.tsv  report.txt  transposed_report.tex  transposed_report.tsv  transposed_report.txt
analyses/quast/contigs_reports/: all_alignments_ramilass_fuse-contigs.tsv  contigs_report_minia-contigs.stderr  contigs_report_minia-contigs.stdout  contigs_report_ramilass_fuse-contigs.stderr  contigs_report_ramilass_fuse-contigs.stdout  misassemblies_report.tex  misassemblies_report.tsv  misassemblies_report.txt  transposed_report_misassemblies.tex  transposed_report_misassemblies.tsv  transposed_report_misassemblies.txt  unaligned_report.tex  unaligned_report.tsv  unaligned_report.txt
analyses/quast/contigs_reports/minimap_output/: minia-contigs.sf  ramilass_fuse-contigs.coords  ramilass_fuse-contigs.coords.filtered  ramilass_fuse-contigs.coords_tmp  ramilass_fuse-contigs.sf  ramilass_fuse-contigs.used_snps
analyses/quast/genome_stats/: genome_info.txt  ramilass_fuse-contigs_gaps.txt
analyses/quast/icarus_viewers/: alignment_viewer.html  contig_size_viewer.html
benchmark/: bench.sh  benchmark_results_raw.tsv  plot.py
data/: reads.fasta
report/: PARTIE_4_Methode.tex
src/: bitvector.cpp  bitvector.h  compare.cpp  compare.h  convert.cpp  convert.h  graphdbj.cpp  graphdbj.h  main.cpp
tests/: test_compare.cpp  test_convert.cpp
